--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,12 +60,8 @@ jobs:
               exit 1
             fi
 
-            echo "Getting all dependency"
-            docker build --no-cache -f dockerfile/dep.Dockerfile  -t dccn-hub-dep:latest .
-            docker create -ti --name dccn-hub-dep-container dccn-hub-dep bash
-            docker cp dccn-hub-dep-container:/go/src/github.com/Ankr-network/dccn-hub/vendor ./
-            docker rm -fv dccn-hub-dep-container
-
+            dep ensure --vendor-only 
+            
             for((i=0; i<arrlen; i++)); do
               docker build --build-arg APP_DOMAIN=${APP_DOMAIN} --no-cache -f "dockerfile"/${dockerfile_arr[$i]}.Dockerfile -t ${component_arr[$i]}:$BRANCH_NAME .
               for TAG in $BRANCH_NAME $SHA1_SHORT $BRANCH_NAME$DATE; do
