SWDEV-247 revise update app
SWDEV-247 revise error msg status code

SWDEV-247 revise for pr

SWDEV-247 revise app detail

SWDEV-247 revise update namespace

SWDEV-247 revise app

SWDEV-247 update common branch

--- a/examples/test/values.yaml
+++ b/examples/test/values.yaml
@@ -35,7 +35,7 @@ wordpressUsername: user
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-wordpress#environment-variables
 ##
-# wordpressPassword:
+wordpressPassword: password
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-wordpress#environment-variables
@@ -134,7 +134,7 @@ mariadb:
   ##
   master:
     persistence:
-      enabled: true
+      enabled: false
       ## mariadb data Persistent Volume Storage Class
       ## If defined, storageClassName: <storageClass>
       ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -204,7 +204,7 @@ readinessProbe:
 ##
 ingress:
   ## Set to true to enable ingress record generation
-  enabled: false
+  enabled: true
 
   ## Set this to true in order to add the corresponding annotations for cert-manager
   certManager: false
@@ -221,7 +221,7 @@ ingress:
   ## The list of hostnames to be covered with this ingress record.
   ## Most likely this will be just one host, but in the event more hosts are needed, this is an array
   hosts:
-  - name: wordpress.local
+  - name: wordpress.lotte.ankr.com
     path: /
 
     # Set this to true in order to enable TLS on the ingress record
@@ -248,7 +248,7 @@ ingress:
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
 ##
 persistence:
-  enabled: true
+  enabled: false
   ## wordpress data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
