SWDEV-269 SWDEV-281 add hide cancelled app and dc heartbeat (#9)
* SWDEV-269 SWDEV-281 add hide cancelled app and dc heartbeat

SWDEV-281 add dcstatus update optype

SWDEV-281 add detail in applist

SWDEV-281 revise dcstatus update

SWDEV-281 revise ns update

SWDEV-281 fix bson value

SWDEV-281 fix unavailable state transfer

SWDEV-281 add cluster connection record

SWDEV-281 add create cluster connection

SWDEV-281 revise cluster connection update

SWDEV-281 revise cluster connection creation

SWDEV-281 revise cluster record query

fix chartdetail bug

SWDEV-269 rebase and revise circleci

* SWDEV-301 fix dispatch state after launch_app_succeed

SWDEV-281 delete originstatus

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,33 +54,21 @@ jobs:
               CHARTMUSEUM_URL="http://chart-dev.dccn.ankr.com:8080"
             fi
 
-            declare -a component_arr=("dccn-appmgr")
-            declare -a dockerfile_arr=("app")
-            if [[ (${#component_arr[@]} == ${#dockerfile_arr[@]}) ]]
-            then
-              arrlen=${#component_arr[@]}
-            else
-              exit 1
-            fi
-
             dep ensure --vendor-only 
 
-            for((i=0; i<arrlen; i++)); do
-              docker build --no-cache --build-arg CHARTMUSEUM_URL=${CHARTMUSEUM_URL}  -f "dockerfile"/${dockerfile_arr[$i]}.Dockerfile -t ${component_arr[$i]}:$BRANCH_NAME .
-              for TAG in $BRANCH_NAME $SHA1_SHORT $BRANCH_NAME$DATE; do
-                docker tag ${component_arr[$i]}:$BRANCH_NAME $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/${component_arr[$i]}:$TAG
-                docker push $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/${component_arr[$i]}:$TAG
-              done
+            docker build --no-cache --build-arg CHARTMUSEUM_URL=${CHARTMUSEUM_URL}  -f dockerfile/app.Dockerfile -t dccn-appmgr:$BRANCH_NAME .
+            for TAG in $BRANCH_NAME $SHA1_SHORT $BRANCH_NAME$DATE; do
+              docker tag dccn-appmgr:$BRANCH_NAME $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/dccn-appmgr:$TAG
+              docker push $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/dccn-appmgr:$TAG
             done
-            declare -a deployment_arr=("appmgr")
-            declare -a name_arr=("dccn-appmgr")
-
+            
             kops export kubecfg --name ${K8S_CLUSTER}.k8s.ankr.network --state s3://kops.${K8S_CLUSTER}.config
-            for ((i=0; i<arrlen; i++)); do
-              kubectl set image ${name_arr[$i]}=$AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/${component_arr[$i]}:${BRANCH_NAME}${DATE} --local -f kubernetes/${dockerfile_arr[$i]}.yml -o yaml > kubernetes/${dockerfile_arr[$i]}_patch.yml
-              kubectl apply -f kubernetes/${dockerfile_arr[$i]}_patch.yml
-              if ! kubectl rollout status deploy/${deployment_arr[$i]} --watch=true --timeout=60s; then
-                echo "Deploy failed, roll back to previous version"
-                kubectl rollout undo deploy/${deployment_arr[$i]} 
-              fi
-            done
+            
+            kubectl set image dccn-appmgr=$AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/dccn-appmgr:${BRANCH_NAME}${DATE} --local -f kubernetes/app.yml -o yaml > kubernetes/app_patch.yml
+            kubectl apply -f kubernetes/app_patch.yml
+            if ! kubectl rollout status deploy/appmgr --watch=true --timeout=60s; then
+              echo "Deploy failed, roll back to previous version"
+              kubectl rollout undo deploy/appmgr 
+            fi
+            kubectl apply -f kubernetes/app_svc.yml
+            
