--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,10 +65,13 @@ jobs:
             kops export kubecfg --name ${K8S_CLUSTER}.k8s.ankr.network --state s3://kops.${K8S_CLUSTER}.config
             
             kubectl set image dccn-appmgr=$AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/dccn-appmgr:${BRANCH_NAME}${DATE} --local -f kubernetes/app.yml -o yaml > kubernetes/app_patch.yml
+            kubectl set image dccn-appmgr=$AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/dccn-appmgr:${BRANCH_NAME}${DATE} --local -f kubernetes/app_test.yml -o yaml > kubernetes/app_test_patch.yml
             kubectl apply -f kubernetes/app_patch.yml
             if ! kubectl rollout status deploy/appmgr --watch=true --timeout=60s; then
               echo "Deploy failed, roll back to previous version"
               kubectl rollout undo deploy/appmgr 
             fi
             kubectl apply -f kubernetes/app_svc.yml
+            sleep 30
+            kubectl apply -f kubernetes/app_test_patch.yml
             
