SWDEV-360 fix appmgr bugs
SWDEV-360 fix test job yaml in circleci

SWDEV-360 fix test func sorting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,5 +73,8 @@ jobs:
             fi
             kubectl apply -f kubernetes/app_svc.yml
             sleep 30
+            if kubectl get job appmgr-test; then
+              kubectl delete job appmgr-test
+            fi
             kubectl apply -f kubernetes/app_test_patch.yml
             
