--- a/kubernetes/app_test.yml
+++ b/kubernetes/app_test.yml
@@ -4,6 +4,7 @@ metadata:
   name: appmgr-test
 spec:
   ttlSecondsAfterFinished: 100
+  successfulJobsHistoryLimit: 1
   template:
     spec:
       containers:
